--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.gms.gms_meal" >
+    package="com.gms.gms_meal">
 
-    <uses-sdk  tools:overrideLibrary="is.arontibo.library"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-sdk tools:overrideLibrary="is.arontibo.library" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
-        tools:replace="theme, icon, label"
-
         android:allowBackup="true"
+
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher_main"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:theme="@style/AppTheme"
-        android:hardwareAccelerated="true"
-        android:largeHeap="true">
+        tools:replace="theme, icon, label">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:configChanges="orientation|screenSize"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,9 +28,12 @@
             </intent-filter>
         </activity>
         <activity
+            android:configChanges="orientation|screenSize"
             android:name=".Dev.DeveloperActivity">
 
         </activity>
+
+        <receiver android:name=".Alarm.AlarmLunchReciever"></receiver>
     </application>
 
 </manifest>
