--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     compile 'com.github.traex.rippleeffect:library:1.3'
     compile 'com.xgc1986.android:parallaxpagertransformer:1.0.3'
     compile 'com.romainpiel.shimmer:library:1.3.0'
+    compile 'com.android.support:support-v4:22.2.0'
 }
