--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     compile 'com.xgc1986.android:parallaxpagertransformer:1.0.3'
     compile 'com.romainpiel.shimmer:library:1.3.0'
     compile 'com.android.support:support-v4:22.2.0'
+    compile 'com.nispok:snackbar:2.10.10'
 }
