--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
       tools:replace="theme, icon, label">
     <activity
         android:name=".MainActivity"
-        android:configChanges="orientation|screenSize"
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
         android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN"/>
